[package]
name = "membership"
version = "0.0.4"
authors = ["Zbigniew Kostrzewa <zkostrzewa@gmail.com>"]
edition = "2018"
description = "Implementation of Scalable Weakly-consistent Infection-style Process Group Membership Protocol with extensions"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/localghost/membership"

[dependencies]
mio = "0.6.19"
mio-extras = "2.0.5"
structopt = "0.2.15"
bytes = "0.4.12"
log = "0.4.6"
env_logger = "0.6.1"
failure = "0.1.5"
rand = { version = "0.7.1", features = ["small_rng"] }

[dev-dependencies]
libc = "0.2.0"
