[package]
name = "membership"
version = "0.0.6"
authors = ["Zbigniew Kostrzewa <zkostrzewa@gmail.com>"]
edition = "2018"
description = "Implementation of Scalable Weakly-consistent Infection-style Process Group Membership Protocol with extensions"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/localghost/membership"

[dependencies]
mio = "0.6.19"
mio-extras = "2.0.5"
structopt = "0.2.15"
bytes = "0.5.3"
log = "0.4.6"
env_logger = "0.6.1"
failure = "0.1.5"
rand = { version = "0.7.1", features = ["small_rng"] }
sha-1 = "0.8.1"
slog = "2.5.2"

[dev-dependencies]
libc = "0.2.0"
slog-term = "2.5.0"
slog-async = "2.4.0"
sloggers = "0.3.5"