[package]
name = "membership_encoder_proc"
version = "0.0.1"
authors = ["Zbigniew Kostrzewa <zkostrzewa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.13"
quote = "1.0.2"
proc-macro2 = "1.0.7"
proc-macro-hack = "0.5.11"